Added links to navigate from main home page and return back

--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
     
      <title>Daria Aesthetics</title>
         <!-- this shows up in the tab and in a google search -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_image/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_image/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_image/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 
 <body>
-    <p><h1>Welcome to Daria Aesthetics</h1></p>
+    <!-- Better approach -->
+<nav>
+  <ul>
+    <li><a href="pages/pricing_services.html">Services and Prices</a></li>
+    <li><a href="pages/schedule.html">Schedule</a></li>
+    <li><a href="pages/first_visit.html">First Visit</a></li>
+    <li><a href="pages/skin_care.html">Skin Care</a></li>
+    <li><a href="pages/about.html">About</a></li>
+    <li><a href="pages/contact.html">Contact</a></li>
+  </ul>
+</nav>
 
-    <p><h6>This studio is Ukrainian owned and operated.</h6></p>
+        <p><h6>This studio is Ukrainian owned and operated.</h6></p>
 </body>
 
 
