Added colors to the css and index.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta charset = "UTF-8"> <!-- this is telling which characterset to use-->
     <!-- this is where the xtra information goes that doesn't show up on the screen but important
      to make sure the stuff goes properly-->
+
+    <link rel="stylesheet" href="css/styles.css">
+    <!--this is linking the css style sheet to this document-->
     
      <title>Daria Aesthetics</title>
         <!-- this shows up in the tab and in a google search -->
@@ -15,11 +18,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_image/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_image/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <!--This is how I select the favicon in the tabs-->
 </head>
 
 <body>
     <!-- Better approach -->
-     
+
 <nav>
   <ul>
     <li><a href="pages/pricing_services.html">Services and Prices</a></li>
@@ -31,7 +35,7 @@
   </ul>
 </nav>
 
-        <p><h6>This studio is Ukrainian owned and operated.</h6></p>
+        <p><h6>This studio is Ukrainian owned and operated. 🇺🇦</h6></p>
 </body>
 
 
