--- a/pages/first_visit.html
+++ b/pages/first_visit.html
@@ -8,6 +8,8 @@
         <!-- this is where the xtra information goes that doesn't show up on the screen but important
         to make sure the stuff goes properly-->
         
+        <link rel="stylesheet" href="css/styles.css">
+        
         <title>First Visit</title>
             <!-- this shows up in the tab and in a google search -->
     </head>
