--- a/pages/training.html
+++ b/pages/training.html
@@ -7,6 +7,8 @@
         <meta charset = "UTF-8"> <!-- this is telling which characterset to use-->
         <!-- this is where the xtra information goes that doesn't show up on the screen but important
         to make sure the stuff goes properly-->
+
+        <link rel="stylesheet" href="css/styles.css">
         
         <title>Training</title>
             <!-- this shows up in the tab and in a google search -->
