Restructuring layout of web page, added a google font

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <!--this is linking the css style sheet to this document-->
     
-     <title>Daria Aesthetics</title>
+    <title>Daria Aesthetics</title>
         <!-- this shows up in the tab and in a google search -->
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_image/apple-touch-icon.png">
@@ -19,10 +19,32 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_image/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <!--This is how I select the favicon in the tabs-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
+    <!--This is how I pulled font from google fonts there's a corresponding code in my styles sheet-->
 </head>
 
 <body>
-    <!-- Better approach -->
+  <div class = "page">
+    <div class ="top_banner">
+      <div class ="menu">
+        <div class="services"> Services
+        </div>
+        <div class ="training">Training</div>
+        <div class = "about me">About Me</div>
+      </div>
+
+      <div class = "logo"> daria aesthetics</div>
+
+      <div class = "booking button">Book My Appointment
+      </div>
+
+
+    </div>
+
+    
 
 <nav>
   <ul>
@@ -36,6 +58,7 @@
 </nav>
 
         <p><h6>This studio is Ukrainian owned and operated. 🇺🇦</h6></p>
+   </div>
 </body>
 
 
