--- a/index.html
+++ b/index.html
@@ -38,13 +38,11 @@
 
       <div class = "logo"> daria aesthetics</div>
 
-      <div class = "booking button">Book My Appointment
+      <div class = "button_container">
+        <a href = "https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg" class = "booking_button">Book My Appointment
+
+        </div>
       </div>
-
-
-    </div>
-
-    
 
 <nav>
   <ul>
