--- a/index.html
+++ b/index.html
@@ -30,21 +30,20 @@
   <div class = "page">
     <div class ="top_banner">
       <div class ="menu">
-        <div class="services"> Services
-        </div>
-        <div class ="training">Training</div>
-        <div class = "about me">About Me</div>
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
 
       <div class = "logo"> daria aesthetics</div>
 
       <div class = "button_container">
-        <a href = "https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg" class = "booking_button">Book My Appointment
+        <a href = "https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg" target = "_blank" "booking_button">Book My Appointment</a>
 
         </div>
       </div>
 
-<nav>
+<!-- <nav>
   <ul>
     <li><a href="pages/pricing_services.html">Services and Prices</a></li>
     <li><a href="pages/schedule.html">Schedule</a></li>
@@ -53,7 +52,7 @@
     <li><a href="pages/about.html">About</a></li>
     <li><a href="pages/contact.html">Contact</a></li>
   </ul>
-</nav>
+</nav> -->
 
         <p><h6>This studio is Ukrainian owned and operated. 🇺🇦</h6></p>
    </div>
