--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <div class ="menu">
         <span></span>
         <span></span>
-        <span></span>
+      <span></span>
       </div>
 
-      <div class = "logo"> daria aesthetics</div>
+      <div class="logo">daria aesthetics</div>
 
-      <div class = "button_container">
-        <a href = "https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg" target = "_blank" "booking_button">Book My Appointment</a>
+      <div class="button_container">
+        <a href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg" class = "booking_button" target="_blank" rel="noopener">Book My Appointment</a>
 
         </div>
       </div>
