--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
   </ul>
 </nav> -->
 
-        <p><h6>This studio is Ukrainian owned and operated. 🇺🇦</h6></p>
+        
    </div>
 </body>
+
+<footer>
+  <p><h6>This studio is Ukrainian owned and operated. 🇺🇦</h6></p>
+</footer>
 
 
 </html>
