Footer style adjustment

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </body>
 
 <footer>
-  <p><h6>This studio is Ukrainian owned and operated. 🇺🇦</h6></p>
+  <p>Ukrainian owned and operated. 🇺🇦</p>
 </footer>
 
 
