Fixed the menu dropdown to include home page

--- a/pages/pricing_services.html
+++ b/pages/pricing_services.html
@@ -69,7 +69,7 @@
         <span></span>
       </button>
       <div class="dropdown-content" id="servicesDropdown">
-        <a href="pages/pricing_services.html">Services and Prices</a>
+        <a href="../index.html">Home</a>
         <a href="pages/schedule.html">Schedule</a>
         <a href="pages/first_visit.html">First Visit</a>
         <a href="pages/skin_care.html">Skin Care</a>
@@ -85,10 +85,10 @@
 
         </div> <!--End of top banner-->
     </div> 
-    <div class="service_container face">
+    <div class="service__block face">
       <div class="marquee_container">
           <div class="marquee_content face"> 
-              &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  
+              &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  &hearts;  FACIAL SERVICES  
           </div> <!-- Closing tag for marquee_content -->
       </div> <!-- Closing tag for marquee_container -->
 
@@ -121,14 +121,14 @@
             <div class ="time eyebrows"> 15 mins</div>
       </div>
 
-      </div>
+      </div><!--Container end-->
         
-    </div>
+    </div><!--Service container end-->
 
     <div class="service_container upper_body">
       <div class="marquee_container">
           <div class="marquee_content upper_body"> 
-              &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  
+              &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  &hearts;  UPPER BODY SERVICES  
           </div> <!-- Closing tag for marquee_content -->
       </div> <!-- Closing tag for marquee_container -->
       <div class="service_detail_container">
@@ -170,7 +170,7 @@
     <div class="service_container lower_body">
       <div class="marquee_container">
           <div class="marquee_content lower_body"> 
-              &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  
+              &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  &hearts;  LOWER BODY SERVICES  
           </div> <!-- Closing tag for marquee_content -->
       </div> <!-- Closing tag for marquee_container -->
       <div class="service_detail_container">
@@ -200,7 +200,7 @@
     <div class="service_container intimate">
       <div class="marquee_container">
           <div class="marquee_content intimate"> 
-              &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  
+              &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  &hearts;  INTIMATE SERVICES  
           </div> <!-- Closing tag for marquee_content -->
       </div> <!-- Closing tag for marquee_container -->
       <div class="service_detail_container">
@@ -220,11 +220,11 @@
               <div class="cost brazilian">50 $</div>
               <div class="time brazilian">30 mins</div>
           </div>
-          <div class="price_info between_cheeks">Between the Cheeks
+          <div class="price_info between_cheeks">Between Cheeks
               <div class="cost between_cheeks">20 $</div>
               <div class="time between_cheeks">10 mins</div>
           </div>
-          <div class="price_info bum_cheeks">Bum Cheeks (includes between cheeks)
+          <div class="price_info bum_cheeks">Bum Cheeks (and between)
               <div class="cost bum_cheeks">35 $</div>
               <div class="time bum_cheeks">15 mins</div>
           </div>
