--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Updock&display=swap" rel="stylesheet">
     <!--This is how I pulled font from google fonts there's a corresponding code in my styles sheet-->
 </head>
 
@@ -46,7 +46,7 @@
     </div>
       </div>
 
-      <div class="logo">daria aesthetics</div>
+      <div class="logo">Daria Aesthetics</div>
 
       <div class="button_container">
         <a href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg" class = "booking_button" target="_blank" rel="noopener">Book My Appointment</a>
