--- a/pages/pricing_services.html
+++ b/pages/pricing_services.html
@@ -13,43 +13,9 @@
     <title>Services and Pricing</title>
     <!-- this shows up in the tab and in a google search -->
 
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="..//img/favicon_image/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="../img/favicon_image/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="../img/favicon_image/favicon-16x16.png"
-    />
-    <link rel="manifest" href="site.webmanifest" />
-    <!--This is how I select the favicon in the tabs-->
-  </head>
-
-
-  <head>
-    <meta charset = "UTF-8"> <!-- this is telling which characterset to use-->
-    <!-- this is where the xtra information goes that doesn't show up on the screen but important
-     to make sure the stuff goes properly-->
-
-    <link rel="stylesheet" href="../css/styles.css">
-    <!--this is linking the css style sheet to this document-->
-
-       
-    <title>Daria Aesthetics</title>
-        <!-- this shows up in the tab and in a google search -->
-
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_image/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_image/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_image/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_image/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_image/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon_image/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <!--This is how I select the favicon in the tabs-->
 
@@ -69,12 +35,13 @@
         <span></span>
       </button>
       <div class="dropdown-content" id="servicesDropdown">
-        <a href="../index.html">Home</a>
-        <a href="pages/schedule.html">Schedule</a>
-        <a href="pages/first_visit.html">First Visit</a>
-        <a href="pages/skin_care.html">Skin Care</a>
-        <a href="pages/about.html">About</a>
-        <a href="pages/contact.html">Contact</a>
+        <a href="/index.html">Home</a>
+        <a href="/pages/training.html">Training</a>
+        <a href="/pages/availability.html">Availability</a>
+        <a href="/pages/first_visit.html">First Visit</a>
+        <a href="/pages/skin_care.html">Skin Care</a>
+        <a href="/pages/about.html">About</a>
+        <a href="/pages/contact.html">Contact</a>
     </div>
       </div>
 
@@ -245,6 +212,7 @@
       </main>
     </div>
 
-    <p><a href="../index.html">Home</a></p>
+       <script src="../js/script.js"></script>
+    <!--this is linking the js file-->
   </body> -->
 </html>
