Started building the backend, first item a basic server.

--- a/pages/availability.html
+++ b/pages/availability.html
@@ -77,6 +77,16 @@
         </div>
       </div>
       <!--End of top banner-->
+
+    <div class="weekly_schedule"> My studio is open:
+      <ul>
+        <li>Monday - 6:30 pm - 9 pm</li>
+        <li>Tuesday - 10 am - 7 pm</li>
+        <li>Thursday -  6:30 pm - 9pm</li>
+        <li>Saturday - 10 am - 7 pm</li>
+      </ul>
+    </div>
+
     </div>
   </body>
      <script src="../js/script.js"></script>
