Added a hero image

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
           >
         </div>
       </div>
+      <img 
+      src = "img/mainpageHero.jpg" 
+      alt="A collage picture with a sign that says /'Yay its Waxing Day/' a picture of a girl and a waxing equipment."
+      max-width:100%
+      height: auto>
     </div>
     <script src="./js/script.js"></script>
     <!--this is linking the js file-->
