Added a HeroImage and updated the logo image.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,14 @@
           </div>
         </div>
 
-        <div class="logo">Daria Aesthetics</div>
+        <div class="logocontainer">
+          <img
+            src="img/DAlogo2.png"
+            class="logoImage"
+            alt="DariaAesthetics logo"
+          />
+          <div class="logo">Daria Aesthetics</div>
+        </div>
 
         <div class="button_container">
           <a
@@ -75,11 +82,9 @@
           >
         </div>
       </div>
-      <img 
-      src = "img/mainpageHero.jpg" 
-      alt="A collage picture with a sign that says /'Yay its Waxing Day/' a picture of a girl and a waxing equipment."
-      max-width:100%
-      height: auto>
+
+      <img src = "img/mainpageHero2.jpg" class = "heroimage" alt="A collage picture with a sign that
+      says /'Yay its Waxing Day/' a picture of a girl and a waxing equipment.">
     </div>
     <script src="./js/script.js"></script>
     <!--this is linking the js file-->
